--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Raspberry Pi Digit Recognition</h1>
-    <img src="{{ url_for('video_feed') }}">
+    <button onclick="window.location.href='{{url_for('segment_test')}}'"> Test Display</button>
+    <button onclick="window.location.href='{{url_for('run_network')}}'"> Run Network</button>
   </body>
 </html>
